# sanzaru

./: .coverage  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  setup.sh
.claude-plugin/: marketplace.json
.claude/commands/: podcast-gen.md  prompt-guidance.md
.github/workflows/: ci-cd.yml  publish-to-pypi.yml
docs/: api-reference.md  async-optimization-spec.md  async-optimizations.md  image-generation.md  image-input-feature-spec.md  reference-images.md  sora-prompting-guide.md  sora2-prompting-guide.md  stress-test-results.md  testing-plan.md
docs/audio/: MIGRATION_STATUS.md  README.md  architecture.md  mcp-overview.md  mcp-readme.md  openai-audio.md  openai-realtime.md
docs/benchmarks/: async_benchmark.py
docs/roadmap/: async-optimization-spec.md  audio-migration-README.md  audio-migration-feature-spec.md  open-source-release-spec.md  phase-0-foundation.md  phase-2-integration.md  track-a-audio-domain.md  track-b-audio-services.md  track-c-infrastructure.md  track-d-tests-docs.md
plugin/: .mcp.json
plugin/.claude-plugin/: plugin.json
plugin/skills/prompt-guidance/: SKILL.md
plugin/skills/prompt-guidance/reference/: SORA-PROMPTING.md  WORKFLOWS.md
src/sanzaru/: config.py  descriptions.py  features.py  security.py  server.py  types.py  user_context.py
src/sanzaru/app/media-viewer/: mcp-app.html  package.json
src/sanzaru/app/media-viewer/src/: global.css  media-viewer.tsx
src/sanzaru/audio/: __init__.py  config.py  constants.py  processor.py  utils.py
src/sanzaru/audio/services/: __init__.py  audio_service.py  file_service.py  transcription_service.py  tts_service.py
src/sanzaru/infrastructure/: __init__.py  cache.py  file_system.py  path_resolver.py
src/sanzaru/storage/: __init__.py  databricks.py  factory.py  local.py  protocol.py
src/sanzaru/tools/: __init__.py  audio.py  image.py  images_api.py  media_viewer.py  podcast.py  reference.py  video.py
src/sora_mcp/: server.py
src/sora_mcp_server/: config.py  descriptions.py  security.py  server.py
src/sora_mcp_server/tools/: image.py  reference.py  video.py
tests/: conftest.py
tests/audio/: conftest.py  test_audio_files.py  test_audio_processor.py  test_audio_service.py  test_cache.py  test_file_filter.py  test_file_service.py  test_file_system.py  test_openai_client.py  test_path_resolver.py  test_podcast_tools.py  test_server.py  test_text_utils.py
tests/integration/: test_image_input.py  test_image_tools.py  test_images_api_tools.py  test_media_viewer_tools.py  test_multimodal_integration.py  test_reference_tools.py  test_video_tools.py
tests/unit/: test_config.py  test_databricks_storage.py  test_image_encoding.py  test_image_processing.py  test_local_storage.py  test_media_viewer.py  test_security.py  test_user_context.py  test_utils.py
