[project]
name = "sora-mcp"
version = "0.1.0"
description = "Lightweight FastMCP wrapper around the OpenAI Sora Video API"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "TJC Data & AI"}]

dependencies = [
  "openai>=1.51.0",
  "mcp>=1.2.0",
  "httpx>=0.27.0",
]

[dependency-groups]
dev = [
  "ruff>=0.8.0",
]

[project.scripts]
sora-mcp = "sora_mcp.server:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
# Use `uv sync` to install dependencies.

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "N",   # pep8-naming
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "SIM", # flake8-simplify
]
# Ignore line-too-long for strings (allows readable multi-line tool descriptions)
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
