[project]
name = "sanzaru"
version = "0.1.0"
description = "Lightweight FastMCP wrapper around the OpenAI Sora Video API"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Richie Caputo", email = "rcaputo3@tjclp.com"}
]
maintainers = [
    {name = "Richie Caputo", email = "rcaputo3@tjclp.com"}
]

dependencies = [
  "openai>=2.6.0",
  "mcp>=1.20.0",
  "httpx>=0.27.0",
  "pillow>=12.0.0",
  "anyio>=4.0.0",
  "aiofiles>=24.0.0",
]

[dependency-groups]
dev = [
  "ruff>=0.14.3",
  "pytest>=8.0.0",
  "pytest-asyncio>=0.24.0",
  "pytest-mock>=3.14.0",
  "pytest-cov>=6.0.0",
  "pre-commit>=3.6.0",
  "mypy>=1.18.0",
  "types-aiofiles",
]

[project.scripts]
sanzaru = "sanzaru.server:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
# Use `uv sync` to install dependencies.

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "N",   # pep8-naming
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "SIM", # flake8-simplify
]
# Ignore line-too-long for strings (allows readable multi-line tool descriptions)
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Ignore SIM117 in tests - nested with statements are intentional for pytest.raises
"tests/**/*.py" = ["SIM117"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
  "unit: Unit tests for pure functions (no external dependencies)",
  "integration: Integration tests with mocked external APIs",
]
